@@ -4,6 +4,8 @@
     0th argument.
   * sv.c: fix exit code of status command in lsb mode (thx Mathieu
     Poumeyrol)
+  * chpst.c, svwaitdown.c, svwaitup.c: fix checks for return value of
+    open_* functions (thx David Reiss).
 
 2.0.0
 Sun, 15 Jun 2008 15:31:05 +0000
